Add space background and center canvas

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <title>Galaxy Audio Visualizer</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"/>
+    <style>
+        body {
+            background-color: black;
+            background-image: url("img/night.png");
+            background-repeat: repeat;
+        }
+
+        body canvas {
+            margin: auto;
+            position: absolute;
+            top: 0; left: 0; bottom: 0; right: 0;
+        }
+    </style>
 </head>
 <body>
 
