--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: black;
-            background-image: url("img/night.png");
+            background-image: url("assets/night.png");
             background-repeat: repeat;
         }
 
